# irrigation

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE-REPORT.md  BUGS-REPORT.md  CHANGELOG_desktop_sidebar.md  CLAUDE.md  DEPLOY-INSTRUCTIONS-POST-CONSOLIDATION.md  Dockerfile  EXPERT-ANALYSIS.html  FINAL_FIXES_REPORT.md  FINAL_TESTING_SUMMARY.md  GROUP_CONFLICTS_FIX_REPORT.md  LATEST_FIXES_REPORT.md  MEMORY.md  MOBILE_RESPONSIVE_CHANGES.md  NEXT-AGENT-PROMPT.md  PHOTO_FUNCTIONALITY_REPORT.md  PROMPT-EXPERT-ANALYSIS.md  PROMPT-FIX-PHASES.md  README-LONG.md  README-SHORT.md  README.md  REFACTOR-REPORT.md  RUN_TESTS_V2.sh  SECURITY-REPORT.md  SEQUENTIAL_DURATION_FIX_REPORT.md  SPEC-CIRCULAR-IMPORTS.md  SPEC-RATE-LIMITING.md  SPEC-REVERT-AUTH.md  TESTING.md  TESTING_GUIDE.md  TESTING_REPORT.md  TESTS_V2_SUMMARY.md  TODO.md  WATERING_TIME_FIXES_REPORT.md  alembic.ini  app.py  basic_auth_proxy.py  config.py  (+43 more)
backups/: app.log.1  app.log.2  app.log.3
configs/: nginx-rate-limit.conf
db/: __init__.py  audit.py  base.py  float.py  groups.py  identity.py  logs.py  migrations.py  mqtt.py  programs.py  schema.py  settings.py  telegram.py  users.py  zones.py
docker/: DEPLOY-DOCKER.md  Dockerfile  README.md  docker-compose.yml  mosquitto.conf
irrigation-audit/: README.md
migrations/: README  env.py  reencrypt_secrets.py
models/: __init__.py  user.py
mosquitto/: acl  setup_auth.sh
prototypes/: zones-hunter-v2.html  zones-ui-compare.html
reports/: DYNAMIC_GROUPS_FIX_REPORT.md  FIXES_REPORT.md  final-summary.md  main-vs-v2-comparison.md  stage-a-tests-final.md  stage-a-tests.md  stage-c-integration-tests.md  stage-deploy-244.md  stage1-testing.md  stage2-code-review.md  stage3-security-audit.md  stage6-code-review-v1.md  stage6-security-audit-v1.md  stage6-tests-v1.md  status.html
routes/: admin_users.py  audit_api.py  auth.py  files.py  groups.py  groups_api.py  health_api.py  mqtt.py  mqtt_api.py  programs.py  programs_api.py  reports.py  settings.py  status.py  system_api.py  system_config_api.py  system_emergency_api.py  system_status_api.py  telegram.py  weather_api.py  zones.py  zones_api.py  zones_crud_api.py  zones_history_api.py  zones_photo_api.py  zones_watering_api.py
scheduler/: events.py  jobs.py  program_runner.py  schedule_calc.py  state.py  zone_runner.py
scripts/: healthcheck.sh  run_tests_batched.sh  run_tests_parallel.sh  split-status-js.py  watchdog.sh
services/: api_rate_limiter.py  app_init.py  audit.py  auth_service.py  completion_tracker.py  correlation.py  duration_conflicts.py  et_calculator.py  events.py  float_monitor.py  group_service.py  helpers.py  history_calc.py  image_pipeline.py  irrigation_decision.py  lifecycle_storage.py  locks.py  logging_setup.py  login_rate_limiter.py  master_valve.py  monitors.py  mqtt_pub.py  next_watering.py  observed_state.py  postpone.py  program_queue.py  program_service.py  rate_limiter.py  reports.py  scheduler_service.py  security.py  shutdown.py  sse_hub.py  systemd_notify.py  telegram_bot.py  users_service.py  version.py  watchdog.py  weather.py  weather_adjustment.py  (+5 more)
specs/: AUDIT-LOGGING-EXPANSION-PLAN.md  desktop-sidebar-spec.md  issue-11-architecture.md  issue-11-review.md  issue-12-architecture.md  issue-12-review.md  issue-14-architecture.md  issue-14-review.md  issue-15-architecture.md  issue-16-architecture.md  issue-16-review.md  manual-start-fix-spec.md  program-overlap-analysis.md  program-queue-review.md  program-queue-spec.md  (+9 more)
static/: sw.js  (+1 more)
(+419 files in other folders)
